# motrix-next

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml
docs/: CODE_SIGNING.md  CONTRIBUTING.md  PRIVACY.md
scripts/: add-shutdown-locale.py  bump-version.sh  release.sh
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  clippy.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: aria2.conf
src-tauri/capabilities/: default.json
src-tauri/migrations/: 002_add_added_at.sql
src-tauri/nsis/: hooks.nsh
src-tauri/src/: db_guard.rs  engine.rs  error.rs  gpu_guard.rs  history.rs  lib.rs  main.rs  menu.rs  runtime_config.rs  runtime_services.rs  speed_scheduler.rs  stat_service.rs  task_monitor.rs  tray.rs  upnp.rs
src-tauri/src/aria2/: client.rs  types.rs
src-tauri/src/commands/: app.rs  aria2.rs  config.rs  engine.rs  fs.rs  geoip.rs  history.rs  http_api.rs  mod.rs  net.rs  power.rs  protocol.rs  proxy.rs  runtime_config.rs  tracker.rs  ui.rs  updater.rs  upnp.rs
src-tauri/src/engine/: args.rs  cleanup.rs  lifecycle.rs  mod.rs  state.rs
src-tauri/src/services/: config.rs  deep_link.rs  frontend_action.rs  http_api.rs  mod.rs  monitor.rs  notification.rs  notification_i18n.rs  speed.rs  stat.rs
src/__tests__/: setup.ts
src/api/: aria2.ts
src/api/__tests__/: aria2.test.ts
src/components/about/: AboutPanel.vue
src/components/common/: DirectoryPopover.vue  MTooltip.vue
src/components/layout/: AsideBar.vue  EngineOverlay.vue  PreferenceSubnav.vue  Speedometer.vue  TaskSubnav.vue  WindowControls.vue
src/components/preference/: Advanced.vue  Basic.vue  BitTorrent.vue  Downloads.vue  General.vue  Network.vue  PreferenceActionBar.vue  UpdateDialog.vue
src/components/task/: AddTask.vue  MagnetFileSelect.vue  TaskActions.vue  TaskDetail.vue  TaskItem.vue  TaskItemActions.vue  TaskList.vue
src/composables/: syncGlobalOptions.ts  useAddTaskFileOps.ts  useAddTaskSubmit.ts  useAdvancedActions.ts  useAdvancedPreference.ts  useAppEvents.ts  useAppMessage.ts  useArchivedPaths.ts  useBasicPreference.ts  useBtPreference.ts  useColorScheme.ts  useDownloadCleanup.ts  useDownloadsPreference.ts  useEngineRestart.ts  useFileDelete.ts  useGeneralPreference.ts  useIpc.ts  useMagnetFlow.ts  useNetworkPreference.ts  useNotificationToast.ts  useOsNotification.ts  usePlatform.ts  usePreferenceForm.ts  useSpeedLimiter.ts  useStaleCleanup.ts  useSystemProxyDetect.ts  useTaskActions.ts  useTaskDetailOptions.ts  useTaskLifecycle.ts  useTaskLifecycleService.ts  useTaskNotifyHandlers.ts  useTaskOrder.ts  useTaskSort.ts  useTheme.ts  useTorrentParser.ts  useTrackerProbe.ts  useUpdateFlow.ts  useVisibilityPause.ts
src/composables/__tests__/: nativeTrafficLights.test.ts  syncGlobalOptions.test.ts  taskDetailOptionsParse.test.ts  useAddTaskFileOps.test.ts  useAddTaskSubmit.test.ts  useAdvancedPreference.test.ts  useAppEvents.test.ts  useAppMessage.test.ts  useArchivedPaths.test.ts  useBasicPreference.test.ts  useBtPreference.test.ts  useDownloadCleanup.test.ts  useDownloadsPreference.test.ts  useEngineRestart.test.ts  useFileDelete.test.ts  useGeneralPreference.test.ts  useIpc.test.ts  useMagnetFlow.test.ts  useNetworkPreference.test.ts  useNotificationToast.test.ts  useOsNotification.test.ts  usePlatform.test.ts  useSpeedLimiter.test.ts  useStaleCleanup.test.ts  useSystemProxyDetect.test.ts  useTaskDetailOptions.test.ts  useTaskLifecycle.test.ts  useTaskLifecycleService.test.ts  useTaskNotifyHandlers.test.ts  useTaskOrder.test.ts  useTaskSort.test.ts  useTheme.test.ts  useTorrentParser.test.ts  useUpdateFlow.test.ts
src/layouts/: MainLayout.vue
src/layouts/__tests__/: resizeThrottle.test.ts
src/router/: index.ts
src/shared/: configKeys.ts  constants.ts  logger.ts  timing.ts  types.ts  ua.ts
src/shared/__tests__/: autostartSilentStartup.test.ts  deepLinkStartup.test.ts  diagnosticExportAndLogLevel.test.ts  globalErrorBoundary.test.ts  logger.test.ts  loggingBlindSpots.test.ts  loggingFixes.test.ts  loggingIndustrialization.test.ts  nsis-config.test.ts  panicHook.test.ts  sidecarBinaries.test.ts  startupUpdateCheck.test.ts  tauriPluginSync.test.ts  tauriSecurityConfig.test.ts  updaterSequence.test.ts  upnpShutdownBehavior.test.ts  website-download.test.ts
src/shared/utils/: aria2Proxy.ts  autoArchive.ts  batchHelpers.ts  calcColumnWidth.ts  config.ts  configMigration.ts  curl.ts  externalInputDiagnostics.ts  fileCategory.ts  format.ts  geoip.ts  locale.ts  (+6 more)
src/stores/: app.ts  history.ts  preference.ts  task.ts  taskNotifications.ts  taskOperations.ts
src/styles/: variables.css
src/types/: parse-torrent.d.ts
src/views/: PreferenceView.vue  TaskView.vue
website/: download.d.ts  download.js  i18n.js  index.html  style.css
website/locales/: ar.json  bg.json  ca.json  de.json  el.json  en-US.json  es.json  fa.json  fr.json  hu.json  id.json  it.json  ja.json  ko.json  nb.json  nl.json  pl.json  pt-BR.json  ro.json  ru.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
(+130 files in other folders)
