[package]
name = "motrix-next"
version = "3.0.6-beta.2"
description = "A full-featured download manager"
authors = ["AnInsomniacy"]
edition = "2021"

[lib]
name = "motrix_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-locale = "2.0.1"
url = "2.5.8"
tauri-plugin-window-state = "2.4.1"
igd-next = { version = "0.15", features = ["aio_tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
